Bug 438510 - The text displayed on the left side, stretches outside the background

--- a/stylesheets/template/menu.less
+++ b/stylesheets/template/menu.less
@@ -92,7 +92,7 @@
     /* Sidebar nav */
     #leftcol{
         padding-left:10px;
-        left:-15px;
+        left:-10px;
     }
     .ul-left-nav{
         padding-left:0;
